--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Yangdongfeng : it&#39;s the first step">
+    <meta name="description" content="杨东锋的博客 : 你好，前端">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Yangdongfeng</title>
+    <title>杨东锋的博客</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/shichuanpo/yangdongfeng">View on GitHub</a>
 
-          <h1 id="project_title">Yangdongfeng</h1>
-          <h2 id="project_tagline">it&#39;s the first step</h2>
+          <h1 id="project_title">杨东锋的博客</h1>
+          <h2 id="project_tagline">你好，前端</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/shichuanpo/yangdongfeng/zipball/master">Download this project as a .zip file</a>
@@ -31,37 +31,31 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <p>我从前年转行过来，到现在，已经一年半多了。
+想想之前毅然决然转行过来，真是佩服自己。</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>自己从一个小白，到现在，虽然算不上大牛，连小牛都算不上，倒也颇有心得。
+毕竟自己是一步一步自己摸索走下来的。</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>从网页需要的标签，到css api的研究，再到js库的各种查询，筛选适合自己的插件。
+还有从设计那里拿到初稿，然后自己切图，自己做sprite。
+再一步步体验到维护的不便，于是找到了gulp工具。
+然后一步步走上了正规。</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>我想说的是，不光技术如此，人生当然也是一样，你走的那些步伐，总会有弯路和不影响结果的路。
+但是没关系。
+如果没有试错，就没有方向。</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>欢迎你来到我的博客。
+我将竭尽我的所学，展示给你。
+希望能给你带来帮助，和快乐。</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Yangdongfeng maintained by <a href="https://github.com/shichuanpo">shichuanpo</a></p>
+        <p class="copyright">杨东锋的博客 maintained by <a href="https://github.com/shichuanpo">shichuanpo</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
